# hidden-outlier-generation

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  example notebook.ipynb  example_notebook.ipynb  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
examples/: basic_usage.py  compare_detectors.py  compare_origins.py  visualize_outliers.py
experiments/: README.md
experiments/benchmarks/: scalability.py
experiments/notebooks/: 01_manifold_outlier_detection.ipynb  02_hidden_outliers_for_classification.ipynb  03_visualizing_hidden_outliers.ipynb
multibisect/: Bisect.py  MultiBisect.py  OriginMethod.py  OutlierDetectionMethod.py  OutlierResultType.py  ResultType.py  Utils.py
notebooks/: tutorial.ipynb
src/bisect/: Bisect.py  Utils.py  bisect.py  originMethod.py  utils.py
src/hog_bisect/: __init__.py  bisect.py  hog_bisect.py  origin_method.py  outlier_detection_method.py  outlier_result_type.py  utils.py
src/multibisect/: Bisect.py  Utils.py
tests/: TestMultiBisect.py  conftest.py  testBisect.py  test_bisect.py  test_generator.py  test_origin_method.py  test_outlier_detection_method.py  test_outlier_result_type.py  test_utils.py
