# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidden-outlier-generation"
version = "1.0.0"
description = "Python implementation of the bisect algorithm for hidden outlier generation."
readme = "README.md"
authors = [{ name = "David Schulmeister", email = "david.schulmeister@student.kit.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hidden", "bisect", "outlier", "generation"]
dependencies = [
    "numpy >= 1.21.2",
    "pyod >= 0.9.4",
    "scikit-learn >= 1.2.0",
    "tensorflow >= 2.9.0",
    "joblib >= 1.3.0",
]
requires-python = ">=3.8"



[project.urls]
Homepage = "https://github.com/dschulmeist/hidden-outlier-generation"
