[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hidden-outlier-generation"
version = "1.0.1"
description = "Python implementation of the bisect algorithm for hidden outlier generation."
readme = "README.md"
authors = [{ name = "David Schulmeister", email = "david.schulmeister@student.kit.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["hidden", "bisect", "outlier", "generation", "anomaly-detection", "machine-learning"]
dependencies = [
    "numpy>=2.0.0",
    "pyod>=2.0.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "numba>=0.60.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
deep = [
    "tensorflow>=2.15.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
all = [
    "hidden-outlier-generation[deep,dev]",
]

[project.urls]
Homepage = "https://github.com/dschulmeist/hidden-outlier-generation"
Repository = "https://github.com/dschulmeist/hidden-outlier-generation"
Issues = "https://github.com/dschulmeist/hidden-outlier-generation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hog_bisect"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["hog_bisect"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/hog_bisect"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
